refactor: rewrite SEO copy with search-intent focus

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CSS Gradient Generator - Create Beautiful Gradients</title>
-<meta name="description" content="Free online CSS gradient generator. Create linear, radial, and conic gradients with real-time preview. Copy CSS code instantly.">
+<title>Stop Googling CSS Gradients — Generate, Preview, Copy</title>
+<meta name="description" content="Stop googling CSS gradients. Generate linear, radial, and conic gradients with real-time preview. Copy the CSS code in one click.">
 <meta name="keywords" content="CSS gradient, gradient generator, linear gradient, radial gradient, conic gradient, CSS tool">
-<meta property="og:title" content="CSS Gradient Generator">
-<meta property="og:description" content="Create beautiful CSS gradients with real-time preview. Linear, radial, and conic gradients.">
+<meta property="og:title" content="Stop Googling CSS Gradients — Generate & Copy Instantly">
+<meta property="og:description" content="Stop googling CSS gradients. Generate, preview, copy — done. Linear, radial, and conic gradients.">
 <meta property="og:type" content="website">
 <link rel="canonical" href="https://maxmini0214.github.io/css-gradient/">
 <style>
@@ -55,8 +55,8 @@ input[type=range]::-webkit-slider-thumb{-webkit-appearance:none;width:16px;heigh
 </head>
 <body>
 <header>
-<h1>CSS Gradient Generator</h1>
-<p>Create beautiful gradients — copy the CSS instantly</p>
+<h1>Stop googling CSS gradients.</h1>
+<p>Generate, preview, copy — done.</p>
 </header>
 
 <div class="app">
