SEO: add og:image, JSON-LD, cross-promotion CTA

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <meta property="og:title" content="Stop Googling CSS Gradients — Generate & Copy Instantly">
 <meta property="og:description" content="Stop googling CSS gradients. Generate, preview, copy — done. Linear, radial, and conic gradients.">
 <meta property="og:type" content="website">
+<meta property="og:image" content="https://maxmini0214.github.io/og-default.png">
+<meta property="og:url" content="https://maxmini0214.github.io/css-gradient/">
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebApplication","name":"CSS Gradient Generator","description":"Generate linear, radial, and conic CSS gradients with real-time preview. Copy the CSS code in one click.","url":"https://maxmini0214.github.io/css-gradient/","applicationCategory":"DeveloperApplication"}</script>
 <link rel="canonical" href="https://maxmini0214.github.io/css-gradient/">
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
@@ -204,5 +207,6 @@ pg.appendChild(d);
 
 render();
 </script>
+<div style="text-align:center;padding:2rem 1rem;margin-top:2rem;border-top:1px solid #333348"><a href="https://maxmini0214.github.io/" style="color:#7c6cf0;text-decoration:none;font-size:.9rem">More Free Dev Tools → maxmini0214.github.io</a></div>
 </body>
 </html>
