--- a/index.html
+++ b/index.html
@@ -208,5 +208,6 @@ pg.appendChild(d);
 render();
 </script>
 <div style="text-align:center;padding:2rem 1rem;margin-top:2rem;border-top:1px solid #333348"><a href="https://maxmini0214.github.io/" style="color:#7c6cf0;text-decoration:none;font-size:.9rem">More Free Dev Tools → maxmini0214.github.io</a></div>
+<script data-goatcounter="https://maxdevtools.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
